--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vanille de Madagascar</title>
+  <!-- Open Graph pour réseaux sociaux -->
+<meta property="og:title" content="Vanille Bourbon de Madagascar" />
+<meta property="og:description" content="Découvrez la richesse et la qualité unique de notre vanille Bourbon, cultivée à Madagascar." />
+<meta property="og:image" content="https://pixentrycreatives.github.io/bourbonmadagaskar/meilleur_vanille.jpg" />
+<meta property="og:image:type" content="image/jpeg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:url" content="https://pixentrycreatives.github.io/bourbonmadagaskar/" />
+<meta property="og:type" content="website" />
+
   <style>
     * {
       margin: 0;
